# lib/apiservers/portlayer/restapi/handlers/storage_handlers.go
@@ -15,21 +15,27 @@
 package handlers
 
 import (
+	"bytes"
 	"context"
 	"fmt"
+	"io/ioutil"
 	"net/http"
 	"net/url"
 	"os"
+	"path/filepath"
 	"strconv"
 
 	log "github.com/Sirupsen/logrus"
 	"github.com/go-openapi/runtime/middleware"
 
+	"github.com/davecgh/go-spew/spew"
+	"github.com/vmware/govmomi/vim25/types"
 	"github.com/vmware/vic/lib/apiservers/portlayer/models"
 	"github.com/vmware/vic/lib/apiservers/portlayer/restapi/operations"
 	"github.com/vmware/vic/lib/apiservers/portlayer/restapi/operations/storage"
 	epl "github.com/vmware/vic/lib/portlayer/exec"
 	spl "github.com/vmware/vic/lib/portlayer/storage"
+	splc "github.com/vmware/vic/lib/portlayer/storage/compute"
 	"github.com/vmware/vic/lib/portlayer/storage/nfs"
 	"github.com/vmware/vic/lib/portlayer/storage/vsphere"
 	"github.com/vmware/vic/lib/portlayer/util"
@@ -94,6 +100,10 @@ func (h *StorageHandlersImpl) Configure(api *operations.PortLayerAPI, handlerCtx
 	api.StorageVolumeJoinHandler = storage.VolumeJoinHandlerFunc(h.VolumeJoin)
 	api.StorageListVolumesHandler = storage.ListVolumesHandlerFunc(h.VolumesList)
 	api.StorageGetVolumeHandler = storage.GetVolumeHandlerFunc(h.GetVolume)
+
+	api.StorageExportArchiveHandler = storage.ExportArchiveHandlerFunc(h.ExportArchive)
+	api.StorageImportArchiveHandler = storage.ImportArchiveHandlerFunc(h.ImportArchive)
+	api.StorageStatPathHandler = storage.StatPathHandlerFunc(h.StatPath)
 }
 
 func (h *StorageHandlersImpl) configureVolumeStores(op trace.Operation, handlerCtx *HandlerContext) {
@@ -505,6 +515,101 @@ func (h *StorageHandlersImpl) VolumeJoin(params storage.VolumeJoinParams) middle
 
 	op.Infof("volume %s has been joined to a container", volume.ID)
 	return storage.NewVolumeJoinOK().WithPayload(actualHandle.String())
+}
+
+func (h *StorageHandlersImpl) StatPath(params storage.StatPathParams) middleware.Responder {
+	defer trace.End(trace.Begin(params.ObjectID))
+
+	vc := epl.Containers.Container(params.ObjectID)
+	if vc == nil {
+		log.Debugln("%#v", spew.Sdump(epl.Containers))
+		return storage.NewStatPathNotFound()
+	}
+
+	file, err := splc.StatPath(context.Background(), vc, params.TargetPath)
+	if err != nil {
+		return storage.NewStatPathInternalServerError()
+	}
+
+	headers := &models.StatPathFileInfoResponse{
+		Name:       filepath.Base(file.Path),
+		LinkTarget: file.Attributes.GetGuestFileAttributes().SymlinkTarget,
+		Size:       file.Size,
+	}
+
+	switch types.GuestFileType(file.Type) {
+	case types.GuestFileTypeDirectory:
+		headers.Mode = uint32(os.ModeDir)
+	case types.GuestFileTypeSymlink:
+		headers.Mode = uint32(os.ModeSymlink)
+	}
+
+	return storage.
+	NewStatPathOK().
+		WithMode(headers.Mode).
+		WithLinkTarget(headers.LinkTarget).
+		WithName(headers.Name).
+		WithSize(headers.Size)
+}
+
+// ExportArchive exports a tar archive from the container at target path.
+func (h *StorageHandlersImpl) ExportArchive(params storage.ExportArchiveParams) middleware.Responder {
+	defer trace.End(trace.Begin(params.ObjectID))
+
+	log.Infof("reading test file")
+	// Do whatever you need to do to get an io.Reader
+	buf, err := ioutil.ReadFile("/tmp/test.tar.gz")
+	if err != nil {
+		return storage.NewExportArchiveInternalServerError()
+	}
+
+	log.Infof("streaming buffer back to caller")
+	// Return the data back to the caller
+	// reader := bytes.NewReader([]byte("This is a test"))
+	log.Infof(" Returning %d bytes for buf [%s]", len(buf), string(buf))
+	reader := bytes.NewReader(buf)
+	detachableOut := NewFlushingReader(reader)
+
+	return NewStreamOutputHandler("exportArchive").WithPayload(detachableOut, params.ID, nil)
+	return storage.NewExportArchiveOK()
+}
+
+// ImportArchive imports a tar stream to the container at the target path
+func (h *StorageHandlersImpl) ImportArchive(params storage.ImportArchiveParams) middleware.Responder {
+	defer trace.End(trace.Begin(""))
+
+	// var filterSpec map[string]string
+	// if decodedSpec, err := base64.StdEncoding.DecodeString(*params.FilterSpec); err == nil {
+	// 	if err = json.Unmarshal(decodedSpec, filterSpec); err != nil {
+	// 		log.Errorf("Unable to unmarshal decoded spec: %s", err)
+	// 		return storage.NewImportArchiveInternalServerError()
+	// 	}
+	// }
+
+	// log.Infof("Creating reader for %#v", params)
+	// detachableIn := NewFlushingReader(params.Archive)
+	// // Do whatever you need to do to get an io.Reader
+	// if err := os.Remove("/tmp/test.tar.gz"); err != nil {
+	// 	log.Error(err.Error())
+	// }
+	// testfile, err := os.OpenFile("/tmp/test.tar.gz", os.O_RDWR|os.O_CREATE, 0755)
+	// if err != nil {
+	// 	log.Error("Couldn't open the test file")
+	// }
+
+	// // This is where you need to take the reader and do something with the tar data
+	// // log.Infof("Writing tar file to tmp file %s", tmpfile.Name())
+	// _, err = io.Copy(testfile, detachableIn)
+	// if err != nil {
+	// 	params.Archive.Close()
+	// 	return storage.NewImportArchiveInternalServerError()
+	// }
+
+	// log.Infof("Successful, closing up readers and writers")
+	// testfile.Close()
+	// params.Archive.Close()
+
+	return storage.NewImportArchiveOK()
 }
 
 //utility functions
