# lib/apiservers/portlayer/swagger.json
@@ -1,3 +1,4 @@
+
 {
 	"swagger": "2.0",
 	"basePath": "/",
@@ -171,6 +172,190 @@
 						"schema": {
 							"$ref": "#/definitions/Error"
 						}
+					}
+				}
+			}
+		},
+		"/archive": {
+			"get": {
+				"description": "Exports a tar archive from the target device.",
+				"summary": "Export tar archive from supplied target",
+				"tags": [
+					"storage"
+				],
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/x-gzip"
+				],
+				"operationId": "ExportArchive",
+				"parameters": [
+					{
+						"name":"objectID",
+						"in":"query",
+						"required": true,
+						"type" : "string",
+						"x-nullable": false
+					},
+					{
+						"name":"targetPath",
+						"in":"query",
+						"required": true,
+						"type": "string",
+						"x-nullable": false
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"schema": {
+							"format":"binary"
+						}
+					},
+					"404" : {
+						"description": "Supplied target not found",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					},
+					"409": {
+						"description": "Device or resource has an unresolvable conflict",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					},
+					"500": {
+						"description": "failed to export tar archive from target"
+					},
+					"default": {
+						"description": "error",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					}
+				}
+			},
+			"post": {
+				"description": "Imports a tar stream to a device at the target path",
+				"summary": "Import tar stream to supplied target",
+				"tags": [
+					"storage"
+				],
+				"consumes": [
+					"application/x-tar"
+				],
+				"operationId": "ImportArchive",
+				"parameters": [
+					{
+						"name":"objectID",
+						"in":"query",
+						"required": true,
+						"type" : "string",
+						"x-nullable": false
+					},
+					{
+						"name":"destinationPath",
+						"in":"query",
+						"required": true,
+						"type": "string",
+						"x-nullable": false
+					},
+					{
+						"name": "Archive",
+						"required": true,
+						"in": "body",
+						"schema": {
+							"type":"string",
+							"format":"binary"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK"
+					},
+					"404" : {
+						"description": "Supplied target not found",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					},
+					"409": {
+						"description": "Device or resource has an unresolvable conflict",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					},
+					"500": {
+						"description": "failed to export tar archive from target"
+					},
+					"default": {
+						"description": "error",
+						"schema": {
+							"$ref": "#/definitions/Error"
+						}
+					}
+				}
+			},
+			"head": {
+				"description": "Fetches filesystem stats on the device id at the specified path",
+				"operationId": "StatPath",
+				"tags": [
+					"storage"
+				],
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name":"objectID",
+						"in":"query",
+						"required": true,
+						"type" : "string",
+						"x-nullable": false
+					},
+					{
+						"name":"targetPath",
+						"in":"query",
+						"required": true,
+						"type": "string",
+						"x-nullable": false
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"headers": {
+							"name": {
+								"type": "string",
+								"x-nullable": false
+							},
+							"mode": {
+								"type": "integer",
+								"format": "uint32"
+							},
+							"size": {
+								"type": "integer",
+								"format": "int64"
+							},
+							"linkTarget": {
+								"type": "string",
+								"x-nullable": false
+							}
+						}
+					},
+					"404" : {
+						"description": "supplied target not found"
+					},
+					"500": {
+						"description": "failed to fetch stat path from target"
+					},
+					"default": {
+						"description": "error"
 					}
 				}
 			}
@@ -3461,9 +3646,6 @@
 					}
 				},
 				"workingDir": {
-					"type": "string"
-				},
-				"user": {
 					"type": "string"
 				},
 				"env": {
